<resources>
    <string name="app_name">My Application</string>
    <string name="topup">Topup</string>
    <string name="card_ending_5678">card ending 5678</string>
    <string name="unicredit_j_rossi">UNICREDIT · J. ROSSI</string>
    <string name="_0_00">€0.00</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
</resources>